--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="uk">
   <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WebStudio</title>
   </head>
   <body>
     <header>
-<!-- logo -->
-      <a href="index.html">
-           <h2>WebStudio</h2>
-      </a>
 <!-- main links -->
       <nav>
+<!-- logo -->
+        <a href="./index.html">
+            WebStudio
+        </a>
         <ul>
             <li>
               <a href="">Студія</a>
@@ -38,18 +40,15 @@
     <main>
 <!-- proposition section-->
         <section>
-            <div>
               <h1>
                 Ефективні рішення для вашого бізнесу
               </h1>
-            </div>
         <!-- order button -->
-            <div>
               <button type="button">Замовити послугу</button>
-            </div>
         </section>
 <!-- benefits section-->
         <section>
+            <h2>Переваги</h2>
             <ul>
               <li>
                 <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
@@ -72,32 +71,40 @@
 <!-- action section -->
         <section>
           <h2>Чим ми займаємося</h2>
-          <img src="images/activity1.jpg" width="370" alt="Programming">
-          <img src="images/activity2.jpg" width="370" alt="UX-Design">
-          <img src="images/activity3.jpg" width="370" alt="UI-Design">
+          <ul>
+            <li>
+              <img src="./images/activity1.jpg" width="370" height="295" alt="Програмування">
+            </li>
+            <li>
+              <img src="./images/activity2.jpg" width="370" height="295" alt="UX-Дезайн">
+            </li>
+            <li>
+              <img src="./images/activity3.jpg" width="370" height="295" alt="UI-Дезайн">
+            </li>
+          </ul>
         </section>
 <!-- team section -->
        <section>
           <h2>Наша команда</h2>
           <ul>
               <li>
-                  <img src="images/team1.jpg" width="270" alt="member of our team">
-                  <p>Ігор Дем'яненко</p>
+                  <img src="./images/team1.jpg" width="270" height="260" alt="Ігор Дем'яненко">
+                  <h3>Ігор Дем'яненко</h3>
                   <p>Product Designer</p>
               </li>
               <li>
-                  <img src="images/team2.jpg" width="270" alt="member of our team">
-                  <p>Ольга Рєпіна</p>
+                  <img src="./images/team2.jpg" width="270" height="260" alt="Ольга Рєпіна">
+                  <h3>Ольга Рєпіна</h3>
                   <p>Frontend Developer</p>
               </li>
               <li>
-                  <img src="images/team3.jpg" width="270" alt="member of our team">
-                  <p>Микола Тарасов</p>
+                  <img src="./images/team3.jpg" width="270" height="260" alt="Микола Тарасов">
+                  <h3>Микола Тарасов</h3>
                   <p>Marketing</p>
               </li>
               <li>
-                  <img src="images/team4.jpg" width="270" alt="member of our team">
-                  <p>Михайло Єрмаков</p>
+                  <img src="./images/team4.jpg" width="270" height="260" alt="Михайло Єрмаков">
+                  <h3>Михайло Єрмаков</h3>
                   <p>UI Designer</p>
               </li>
           </ul>
@@ -107,15 +114,14 @@
 <!-- footer section -->
     <footer>
       <!-- logo -->
-      <a href="index.html">
-           <h2>WebStudio</h2>
+      <a href="./index.html">
+           WebStudio
       </a>
       <!-- contacts  -->
+      <address>
         <ul>
-            <li>
-                 <address>
-                      м. Київ, пр-т Лесі Українки, 26
-                 </address>
+            <li>  
+               <a href=""> м. Київ, пр-т Лесі Українки, 26</a>                       
             </li>
             <li>
               <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -124,6 +130,7 @@
               <a href="tel:+3809611111111">+38 096 111 111 11</a>
             </li>
         </ul>
+      </address>
     </footer>
   </body>
 </html>
